unreleased
* chroust: adding replacements <hint-cnt> and <timeout> to text files
* Play audio/video directly in browser using HTML5 (#3)
* chroust: suppress WARNING: clue_IDs are not specified for hint '0' (#9)
* chroust: ability to define initial value for user wallet (#11)
* chroust: Unexpected exception if there is unknown option (#20)

rel 0.2.8
* HQ event log: filter - log type - allow multiple selection (#6)
* HQ event log: filter - team name cannot be scrolled if do not fit screen (#5)
* HQ event log: ability to disable auto-refresh (#7)
* chroust: fix typo in name of config option (#18)

rel 0.2.7
* adding CLI commands for enter key and clear ranks

rel 0.2.6
* correcting SQL commands for solution scheduling

rel 0.2.5
* small fixes for php7

rel 0.2.4
* HQ: event log - fix autorefresh
* fix of loading bootstrap-multiselect javascript

rel 0.2.3
* contest graph: mark the solved clue groups with green color
* metadata: introducing TRUE() and FALSE() conditions for next_cgrp_id
* chroust: better error message if clue is missing but a hint is defined
* chroust: display total price of the hints in the summary
* For each clue grp display when it has been gained

rel 0.2.2
* Fix order of clue groups that are gained at single moment
* Fix PHP session configuration

rel 0.2.1
* Added support for svg and pdf files

rel 0.2.0
* Possibility to show contest graph in team interface
* Possibility to show team place among other teams in the team interface
* HQ: contest graph - can display graph in simplified form
* HQ: event log - allow to filter the log by multiple teams
* HQ: table - allow to sort the table by team name and team rank
* HQ: event log - improvements of the 'key_entered' log events
* HQ: team ranks - graph improvements
* HQ: team ranks - the rank table is updated to reflect lask time selected in the graph
* chroust: possibility to manually specify the wallet_active flag
* Key prefix (initial "I.Q:") is no more hardcoded but can be configured via .ini files