@@ -12,7 +12,7 @@
 DESTDIR=$(CURDIR)/debian/iquest
 
 %:
-	dh $@ 
+	dh $@
 
 install: build
 	dh_testdir
@@ -25,7 +25,8 @@ install: build
 	mkdir -p $(DESTDIR)/etc/iquest
 	mkdir -p $(DESTDIR)/etc/php5/conf.d
 	mkdir -p $(DESTDIR)/etc/php5/apache2/conf.d
-	mkdir -p $(DESTDIR)/var/lib/iquest
+	mkdir -p $(DESTDIR)/var/lib/iquest/data
+	mkdir -p $(DESTDIR)/var/lib/iquest/smarty
 	cp -r $(CURDIR)/config/*    $(DESTDIR)/etc/iquest
 	cp -r $(CURDIR)/doc/php/*   $(DESTDIR)/etc/php5/conf.d
 	cp -r $(CURDIR)/doc/*       $(DESTDIR)/usr/share/doc/iquest
@@ -40,7 +41,8 @@ install: build
 	rm $(DESTDIR)/etc/iquest/iquest.apache.developer
 	ln -sf /etc/iquest $(DESTDIR)/usr/share/iquest/config
 	ln -sf /etc/php5/conf.d/30-iquest.ini $(DESTDIR)/etc/php5/apache2/conf.d/30-iquest.ini
-	ln -sf /var/lib/iquest $(DESTDIR)/usr/share/iquest/data
+	ln -sf /var/lib/iquest/data $(DESTDIR)/usr/share/iquest/data
+	ln -sf /var/lib/iquest/smarty $(DESTDIR)/usr/share/iquest/smarty
 
 # Do not compress the DB schema file
 override_dh_compress:
